# lecture2_state_machines

./: .gitmodules  Readme.md  index.html  style.css
images/: button_state_machine.drawio  traffic_lights.drawio  traffic_lights_combined.drawio  traffic_lights_fc.drawio
traffic_light_example/: CMakeLists.txt
traffic_light_example/src/: main.c  main_fifo.c  main_queue.c  main_simple.c  main_state_centric.c  main_table_driven.c
